<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- generic info -->
    <string name="app_name">Strikes</string>
    <string name="app_reference" translatable="false">PDM 1415v G04 SE1.1</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_companies">Companies</string>
    <string name="title_activity_strike_details">Strike details</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_help">Help</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- menu_main -->
    <string name="action_settings">Settings</string>
    <string name="action_companies">Mute Companies</string>
    <string name="action_refresh_strikes">Update</string>
    <string name="action_about">About us</string>
    <string name="action_help">Help</string>

    <!-- menu_companies -->
    <string name="action_refresh_companies">Refresh companies</string>

    <!-- activity_settings -->
    <string name="as_tv_server_port">Server name and port number</string>
    <string name="as_et_server_hint">Server name</string>
    <string name="as_et_port_hint">Port</string>
    <string name="as_tv_reset_settings">Default settings</string>
    <string name="as_tv_alert_before">Alert in advance:</string>
    <string name="as_tv_alert_before_units">days</string>
    <string name="as_tv_alert_day">Daily alert:</string>
    <string name="as_tv_sync_period">Server synch. frequency:</string>
    <string name="as_tv_sync_period_units">hours</string>
    <string name="as_tv_all_notifications">Display notifications always:</string>

    <string name="as_btn_abort_settings">Abort</string>
    <string name="as_btn_confirm_settings">Confirm</string>

    <!-- activity_main -->
    <string name="am_msg_no_strikes">Woohoo!\nNo strikes, clear to work today!\n:D\n\nWhen new strikes announcements are available you will see it here.\nPlease check Wi-Fi connectivity and select Update on the menu.</string>
    <string name="am_msg_cancelled">Strike cancelled</string>
    <string name="am_msg_filterApplied">Warning: Companies filter applied.</string>
    <string name="am_msg_tap_twice">Tap twice to exit.</string>

    <!-- activity_main listView row -->
    <string name="StrikeLogo">Company logo</string>

    <!-- activity_strike_details -->
    <string name="asd_tvw_from_lbl">From:</string>
    <string name="asd_tvw_to_lbl">To:</string>
    <string name="asd_tvw_company_lbl">Company:</string>
    <string name="asd_tvw_description_lbl">Description:</string>
    <string name="asd_btn_Ok">Ok</string>
    <string name="asd_btn_browser">Browser</string>
    <string name="asd_btn_calendar">+ Calendar</string>
    <string name="txt_strike_at">Strike at</string>
    <string name="strikeCompany">Strike Company</string>

    <!-- activity_main -->
    <string name="am_tvw_hide_companies">Filter out companies</string>
    <string name="am_msg_no_companies">No companies found.\n\nWhen companies will be displayed here when available.\nPlease check Wi-Fi connectivity and select Update on the menu.</string>

    <!-- activity_about -->
    <string name="aa_tv_intro">This app results from an assignment work at the 2014/summer PDM course unit of LEIC at ISEL.\nIt was implemented by group 04 composed by:</string>
    <string name="aa_tv_license">Copyright (c) 2015 ABS+RC+PC</string>
    <string name="aa_tv_license_text">
        Permission is hereby granted, free of charge, to any person obtaining a copy
        of this software and associated documentation files (the "Software"), to deal
        in the Software without restriction, including without limitation the rights
        to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
        copies of the Software, and to permit persons to whom the Software is
        furnished to do so, subject to the following conditions:\n
        The above copyright notice and this permission notice shall be included in
        all copies or substantial portions of the Software.\n
        THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
        IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
        FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
        AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
        LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
        OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
        THE SOFTWARE.\n
        Except as contained in this notice, the name(s) of the above copyright holders shall
        not be used in advertising or otherwise to promote the sale, use or other dealings in
        this Software without prior written authorization.
    </string>

    <!-- activity_help -->
    <string name="ah_tv_notification_icons">Notification icons</string>
    <string name="ah_tv_new_strike">New strike</string>
    <string name="ah_tv_strike_cancelled">Strike cancelled</string>
    <string name="ah_tv_strike_updated">Strike updated</string>
    <string name="ah_tv_strike_today">Strike today</string>
    <string name="ah_tv_strike_coming">Strike coming</string>

    <!-- toasts -->
    <string name="t_srv_unreachable">Server unreachable.\nHint: Check connectivity and configuration.</string>
    <string name="t_internal_err">Internal error.</string>
    <string name="t_excl_cmpns">Mute strike announcements on selected companies.</string>

</resources>
