<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon = "@drawable/ic_action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_companies"
        android:orderInCategory="110"
        android:title="@string/action_companies"
        android:icon = "@drawable/ic_action_edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="120"
        android:title="@string/action_refresh_strikes"
        android:icon = "@drawable/ic_action_refresh"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="130"
        android:title="@string/action_about"
        android:icon = "@drawable/ic_action_group"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_help"
        android:orderInCategory="140"
        android:title="@string/action_help"
        android:icon = "@drawable/ic_stat_strike"
        app:showAsAction="never"
        />

</menu>
