<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pt.isel.pdm.g04.se2_1.SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewServer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/as_tv_server_port"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <EditText
                    android:id="@+id/editTextHostname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:hint="@string/as_et_server_hint"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/editTextPort"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/as_et_port_hint"
                    android:inputType="number" />

            </LinearLayout>

            <Button
                android:id="@+id/settingsResetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="settingsResetButtonClick"
                android:text="@string/as_tv_reset_settings"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <requestFocus />
            </Button>

            <LinearLayout
                android:id="@+id/layoutAlertBefore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:id="@+id/textViewAlertBefore"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:text="@string/as_tv_alert_before"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <EditText
                    android:id="@+id/editTextAlertBefore"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/as_tv_alert_before_units"
                    android:textSize="@dimen/abc_text_size_medium_material" />

            </LinearLayout>

            <Switch
                android:id="@+id/switchDailyNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/as_tv_alert_day" />

            <LinearLayout
                android:id="@+id/layoutSynchPeriod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:id="@+id/textViewSynchPeriod"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:text="@string/as_tv_sync_period"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <EditText
                    android:id="@+id/editTextSynchFrequency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="2" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/as_tv_sync_period_units"
                    android:textSize="@dimen/abc_text_size_medium_material" />

            </LinearLayout>

            <Switch
                android:id="@+id/switchNotifyAlways"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/as_tv_all_notifications" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
