<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/strikeDetailsLayout"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pt.isel.pdm.g04.se2_1.StrikeDetailsActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/datesFromLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/switch_thumb_normal_material_dark"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="vertical"
                android:padding="@dimen/abc_control_inset_material">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asd_tvw_from_lbl" />

                <TextView
                    android:id="@+id/datesFromData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="vertical"
                android:padding="@dimen/abc_control_inset_material">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asd_tvw_to_lbl" />

                <TextView
                    android:id="@+id/datesToData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/companyData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cancelledData"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/holo_green_dark" />

        <LinearLayout
            android:id="@+id/descriptionLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/companyBanner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:contentDescription="@string/strikeCompany"
                android:maxHeight="100dp" />

            <TextView
                android:id="@+id/descriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asd_tvw_description_lbl" />

            <TextView
                android:id="@+id/descriptionData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonsLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:baselineAligned="false"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/browserButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="browserButtonClicked"
                android:text="@string/asd_btn_browser" />

            <Button
                android:id="@+id/calendarButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="calendarButtonClicked"
                android:text="@string/asd_btn_calendar" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>