<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pt.isel.pdm.g04.se2_1.AboutActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aa_tv_intro" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableRow android:weightSum="3">

            <TextView
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="22908" />

            <TextView
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="37325" />

            <TextView
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="37539" />
        </TableRow>

        <TableRow android:weightSum="3">

            <TextView
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="António Borba" />

            <TextView
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="Rui Corveira" />

            <TextView
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="Pedro Cardoso" />
        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/aa_tv_license"
        android:textSize="@dimen/abc_text_size_small_material" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/aa_license_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aa_tv_license_text"
            android:textSize="@dimen/abc_text_size_small_material" />
    </ScrollView>

</LinearLayout>
